load("@rules_conda//conda/environment:defs.bzl", "run_binary")

run_binary(
    name = "2.5",
    environment = "@flex_2.5",
    path = select({
        "@platforms//os:windows": "Library/bin/flex",
        "//conditions:default": "bin/flex",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "2.6",
    environment = "@flex_2.6",
    path = select({
        "@platforms//os:windows": "Library/bin/flex",
        "//conditions:default": "bin/flex",
    }),
    visibility = ["//visibility:public"],
)


alias(
    name = "flex",
    actual = ":2.6",
    visibility = ["//visibility:public"],
)


sh_test(
    name = "help_test",
    srcs = ["//:run_tool_help_test.sh"],
    args = ["$(location :2.6)"],
    data = [":2.6"],
    target_compatible_with =
    select({
            "//:platform_linux_64": [],
            "//:platform_linux_aarch64": [],
            "//:platform_linux_ppc64le": [],
            "//:platform_macos_x86_64": [],
            "//:platform_macos_arm64": [],
            "//conditions:default": ["@platforms//:incompatible"],
        }),
)
