load("@rules_conda//conda/environment:defs.bzl", "run_binary")

run_binary(
    name = "3.9",
    environment = "@grep_3.9",
    path = select({
        "@platforms//os:windows": "Library/bin/grep",
        "//conditions:default": "bin/grep",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "3.10",
    environment = "@grep_3.10",
    path = select({
        "@platforms//os:windows": "Library/bin/grep",
        "//conditions:default": "bin/grep",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "3.11",
    environment = "@grep_3.11",
    path = select({
        "@platforms//os:windows": "Library/bin/grep",
        "//conditions:default": "bin/grep",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "3.12",
    environment = "@grep_3.12",
    path = select({
        "@platforms//os:windows": "Library/bin/grep",
        "//conditions:default": "bin/grep",
    }),
    visibility = ["//visibility:public"],
)


alias(
    name = "grep",
    actual = ":3.12",
    visibility = ["//visibility:public"],
)


sh_test(
    name = "help_test",
    srcs = ["//:run_tool_help_test.sh"],
    args = ["$(location :3.12)"],
    data = [":3.12"],
)
