load("@rules_conda//conda/environment:defs.bzl", "run_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

run_binary(
    name = "3.9",
    environment = "@grep_3.9",
    executable = select({
        "@platforms//os:windows": "grep.exe",
        "//conditions:default": "grep",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "3.10",
    environment = "@grep_3.10",
    executable = select({
        "@platforms//os:windows": "grep.exe",
        "//conditions:default": "grep",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "3.11",
    environment = "@grep_3.11",
    executable = select({
        "@platforms//os:windows": "grep.exe",
        "//conditions:default": "grep",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "3.12",
    environment = "@grep_3.12",
    executable = select({
        "@platforms//os:windows": "grep.exe",
        "//conditions:default": "grep",
    }),
    visibility = ["//visibility:public"],
)


alias(
    name = "grep",
    actual = ":3.12",
    visibility = ["//visibility:public"],
)


sh_test(
    name = "grep_smoke_test",
    srcs = ["//private:tool_smoke_test.sh"],
    args = ["$(location :3.12)"],
    data = [":3.12"],
    target_compatible_with =
    select({
            "//:platform_linux_64": [],
            "//:platform_linux_aarch64": [],
            "//:platform_linux_ppc64le": [],
            "//:platform_macos_x86_64": [],
            "//:platform_macos_arm64": [],
            "//conditions:default": ["@platforms//:incompatible"],
        }),
)
