load("@rules_conda//conda/environment:defs.bzl", "run_binary")

run_binary(
    name = "1.5",
    environment = "@jq_1.5",
    path = select({
        "@platforms//os:windows": "Library/bin/jq",
        "//conditions:default": "bin/jq",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "1.6",
    environment = "@jq_1.6",
    path = select({
        "@platforms//os:windows": "Library/bin/jq",
        "//conditions:default": "bin/jq",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "1.7",
    environment = "@jq_1.7",
    path = select({
        "@platforms//os:windows": "Library/bin/jq",
        "//conditions:default": "bin/jq",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "1.8",
    environment = "@jq_1.8",
    path = select({
        "@platforms//os:windows": "Library/bin/jq",
        "//conditions:default": "bin/jq",
    }),
    visibility = ["//visibility:public"],
)


alias(
    name = "jq",
    actual = ":1.8",
    visibility = ["//visibility:public"],
)


sh_test(
    name = "help_test",
    srcs = ["//:run_tool_help_test.sh"],
    args = ["$(location :1.8)"],
    data = [":1.8"],
    target_compatible_with =
    select({
            "//:platform_linux_64": [],
            "//:platform_linux_aarch64": [],
            "//:platform_macos_x86_64": [],
            "//:platform_macos_arm64": [],
            "//conditions:default": ["@platforms//:incompatible"],
        }),
)
