load("@rules_conda//conda/environment:defs.bzl", "run_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

run_binary(
    name = "1.5",
    environment = "@jq_1.5",
    executable = select({
        "@platforms//os:windows": "jq.exe",
        "//conditions:default": "jq",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "1.6",
    environment = "@jq_1.6",
    executable = select({
        "@platforms//os:windows": "jq.exe",
        "//conditions:default": "jq",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "1.7",
    environment = "@jq_1.7",
    executable = select({
        "@platforms//os:windows": "jq.exe",
        "//conditions:default": "jq",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "1.8",
    environment = "@jq_1.8",
    executable = select({
        "@platforms//os:windows": "jq.exe",
        "//conditions:default": "jq",
    }),
    visibility = ["//visibility:public"],
)


alias(
    name = "jq",
    actual = ":1.8",
    visibility = ["//visibility:public"],
)


sh_test(
    name = "jq_smoke_test",
    srcs = ["//private:tool_smoke_test.sh"],
    args = ["$(location :1.8)"],
    data = [":1.8"],
    target_compatible_with =
    select({
            "//:platform_linux_64": [],
            "//:platform_linux_aarch64": [],
            "//:platform_macos_x86_64": [],
            "//:platform_macos_arm64": [],
            "//conditions:default": ["@platforms//:incompatible"],
        }),
)
