load("@rules_conda//conda/environment:defs.bzl", "run_binary")

run_binary(
    name = "4.2",
    environment = "@make_4.2",
    path = select({
        "@platforms//os:windows": "Library/bin/make",
        "//conditions:default": "bin/make",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "4.3",
    environment = "@make_4.3",
    path = select({
        "@platforms//os:windows": "Library/bin/make",
        "//conditions:default": "bin/make",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "4.4",
    environment = "@make_4.4",
    path = select({
        "@platforms//os:windows": "Library/bin/make",
        "//conditions:default": "bin/make",
    }),
    visibility = ["//visibility:public"],
)


alias(
    name = "make",
    actual = ":4.4",
    visibility = ["//visibility:public"],
)


sh_test(
    name = "help_test",
    srcs = ["//:run_tool_help_test.sh"],
    args = ["$(location :4.4)"],
    data = [":4.4"],
)
