load("@rules_conda//conda/environment:defs.bzl", "run_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

run_binary(
    name = "0.45",
    environment = "@meson_0.45",
    path = select({
        "@platforms//os:windows": "Library/bin/meson",
        "//conditions:default": "bin/meson",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "0.46",
    environment = "@meson_0.46",
    path = select({
        "@platforms//os:windows": "Library/bin/meson",
        "//conditions:default": "bin/meson",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "0.47",
    environment = "@meson_0.47",
    path = select({
        "@platforms//os:windows": "Library/bin/meson",
        "//conditions:default": "bin/meson",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "0.48",
    environment = "@meson_0.48",
    path = select({
        "@platforms//os:windows": "Library/bin/meson",
        "//conditions:default": "bin/meson",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "0.49",
    environment = "@meson_0.49",
    path = select({
        "@platforms//os:windows": "Library/bin/meson",
        "//conditions:default": "bin/meson",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "0.50",
    environment = "@meson_0.50",
    path = select({
        "@platforms//os:windows": "Library/bin/meson",
        "//conditions:default": "bin/meson",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "0.51",
    environment = "@meson_0.51",
    path = select({
        "@platforms//os:windows": "Library/bin/meson",
        "//conditions:default": "bin/meson",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "0.52",
    environment = "@meson_0.52",
    path = select({
        "@platforms//os:windows": "Library/bin/meson",
        "//conditions:default": "bin/meson",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "0.53",
    environment = "@meson_0.53",
    path = select({
        "@platforms//os:windows": "Library/bin/meson",
        "//conditions:default": "bin/meson",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "0.54",
    environment = "@meson_0.54",
    path = select({
        "@platforms//os:windows": "Library/bin/meson",
        "//conditions:default": "bin/meson",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "0.55",
    environment = "@meson_0.55",
    path = select({
        "@platforms//os:windows": "Library/bin/meson",
        "//conditions:default": "bin/meson",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "0.56",
    environment = "@meson_0.56",
    path = select({
        "@platforms//os:windows": "Library/bin/meson",
        "//conditions:default": "bin/meson",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "0.57",
    environment = "@meson_0.57",
    path = select({
        "@platforms//os:windows": "Library/bin/meson",
        "//conditions:default": "bin/meson",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "0.58",
    environment = "@meson_0.58",
    path = select({
        "@platforms//os:windows": "Library/bin/meson",
        "//conditions:default": "bin/meson",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "0.59",
    environment = "@meson_0.59",
    path = select({
        "@platforms//os:windows": "Library/bin/meson",
        "//conditions:default": "bin/meson",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "0.60",
    environment = "@meson_0.60",
    path = select({
        "@platforms//os:windows": "Library/bin/meson",
        "//conditions:default": "bin/meson",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "0.61",
    environment = "@meson_0.61",
    path = select({
        "@platforms//os:windows": "Library/bin/meson",
        "//conditions:default": "bin/meson",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "0.62",
    environment = "@meson_0.62",
    path = select({
        "@platforms//os:windows": "Library/bin/meson",
        "//conditions:default": "bin/meson",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "0.63",
    environment = "@meson_0.63",
    path = select({
        "@platforms//os:windows": "Library/bin/meson",
        "//conditions:default": "bin/meson",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "0.64",
    environment = "@meson_0.64",
    path = select({
        "@platforms//os:windows": "Library/bin/meson",
        "//conditions:default": "bin/meson",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "1.0",
    environment = "@meson_1.0",
    path = select({
        "@platforms//os:windows": "Library/bin/meson",
        "//conditions:default": "bin/meson",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "1.1",
    environment = "@meson_1.1",
    path = select({
        "@platforms//os:windows": "Library/bin/meson",
        "//conditions:default": "bin/meson",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "1.2",
    environment = "@meson_1.2",
    path = select({
        "@platforms//os:windows": "Library/bin/meson",
        "//conditions:default": "bin/meson",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "1.3",
    environment = "@meson_1.3",
    path = select({
        "@platforms//os:windows": "Library/bin/meson",
        "//conditions:default": "bin/meson",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "1.4",
    environment = "@meson_1.4",
    path = select({
        "@platforms//os:windows": "Library/bin/meson",
        "//conditions:default": "bin/meson",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "1.5",
    environment = "@meson_1.5",
    path = select({
        "@platforms//os:windows": "Library/bin/meson",
        "//conditions:default": "bin/meson",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "1.6",
    environment = "@meson_1.6",
    path = select({
        "@platforms//os:windows": "Library/bin/meson",
        "//conditions:default": "bin/meson",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "1.7",
    environment = "@meson_1.7",
    path = select({
        "@platforms//os:windows": "Library/bin/meson",
        "//conditions:default": "bin/meson",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "1.8",
    environment = "@meson_1.8",
    path = select({
        "@platforms//os:windows": "Library/bin/meson",
        "//conditions:default": "bin/meson",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "1.9",
    environment = "@meson_1.9",
    path = select({
        "@platforms//os:windows": "Library/bin/meson",
        "//conditions:default": "bin/meson",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "1.10",
    environment = "@meson_1.10",
    path = select({
        "@platforms//os:windows": "Library/bin/meson",
        "//conditions:default": "bin/meson",
    }),
    visibility = ["//visibility:public"],
)


alias(
    name = "meson",
    actual = ":1.10",
    visibility = ["//visibility:public"],
)


sh_test(
    name = "help_test",
    srcs = ["//:run_tool_help_test.sh"],
    args = ["$(location :1.10)"],
    data = [":1.10"],
    target_compatible_with =
    select({
            "//:platform_linux_64": [],
            "//:platform_linux_aarch64": [],
            "//:platform_linux_ppc64le": [],
            "//:platform_macos_x86_64": [],
            "//:platform_macos_arm64": [],
            "//:platform_windows_x86_64": [],
            "//conditions:default": ["@platforms//:incompatible"],
        }),
)
