load("@rules_conda//conda/environment:defs.bzl", "run_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

run_binary(
    name = "1.6",
    environment = "@ninja_1.6",
    executable = select({
        "@platforms//os:windows": "ninja.exe",
        "//conditions:default": "ninja",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "1.7",
    environment = "@ninja_1.7",
    executable = select({
        "@platforms//os:windows": "ninja.exe",
        "//conditions:default": "ninja",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "1.8",
    environment = "@ninja_1.8",
    executable = select({
        "@platforms//os:windows": "ninja.exe",
        "//conditions:default": "ninja",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "1.9",
    environment = "@ninja_1.9",
    executable = select({
        "@platforms//os:windows": "ninja.exe",
        "//conditions:default": "ninja",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "1.10",
    environment = "@ninja_1.10",
    executable = select({
        "@platforms//os:windows": "ninja.exe",
        "//conditions:default": "ninja",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "1.11",
    environment = "@ninja_1.11",
    executable = select({
        "@platforms//os:windows": "ninja.exe",
        "//conditions:default": "ninja",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "1.12",
    environment = "@ninja_1.12",
    executable = select({
        "@platforms//os:windows": "ninja.exe",
        "//conditions:default": "ninja",
    }),
    visibility = ["//visibility:public"],
)


run_binary(
    name = "1.13",
    environment = "@ninja_1.13",
    executable = select({
        "@platforms//os:windows": "ninja.exe",
        "//conditions:default": "ninja",
    }),
    visibility = ["//visibility:public"],
)


alias(
    name = "ninja",
    actual = ":1.13",
    visibility = ["//visibility:public"],
)


sh_test(
    name = "ninja_smoke_test",
    srcs = ["//private:tool_smoke_test.sh"],
    args = ["$(location :1.13)"],
    data = [":1.13"],
    target_compatible_with =
    select({
            "//:platform_linux_64": [],
            "//:platform_linux_aarch64": [],
            "//:platform_linux_ppc64le": [],
            "//:platform_macos_x86_64": [],
            "//:platform_macos_arm64": [],
            "//:platform_windows_x86_64": [],
            "//:platform_windows_arm64": [],
            "//conditions:default": ["@platforms//:incompatible"],
        }),
)
